--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div class="container py-5">
   <h1 class="text-center mb-5">{{ title }}</h1>
 
@@ -6,5 +5,5 @@
   <app-registro-formulario (nuevoRegistro)="onNuevoRegistro($event)"></app-registro-formulario>
 
   <!-- Tabla de registros -->
-  <app-tabla-registros [registros]="registros"></app-tabla-registros>
+  <app-tabla-registros></app-tabla-registros>
 </div>
